# mindstone-for-pi

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  package.json
docs/: COMPACTION_POLICY.md  MS4CC_PARITY_REQUIREMENTS.md  RECALL_ARCHITECTURE.md  ROADMAP.md  SYNAPSE_CLIENT.md
extensions/mindstone/: index.ts
extensions/synapse/: index.ts
onboarding/: AGENTS.md.example  IDENTITY.md.example  USER.md.example
orchestrator/: bootstrap.sh  pyproject.toml
orchestrator/config/: pi-compaction-settings.fragment.json  synapse.example.toml
orchestrator/hooks/: embedder.py  indexer.py  recall.py  recall_status.py  vectorstore.py
orchestrator/integrations/synapse/: __init__.py  cli.py  client.py  config.py  state.py
orchestrator/memory/: .migrate_frontmatter.py
orchestrator/roles/: software-engineer.md
