[project]
name = "mindstone-for-pi-orchestrator"
version = "0.1.0"
description = "Python recall/indexing support for MindStone for Pi. Kept close to the MS4CC vector stack."
authors = [
    { name = "MindStone Agent", email = "noreply@mindstone.local" },
    { name = "Clint Bodungen", email = "cbodungen@gmail.com" }
]
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "sqlite-vec>=0.1.9"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hooks"]
